--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,4 +1,5 @@
 nav {
+    z-index: 1;
     .flex;
     align-items: center;
     color: @nav-color;
